# wolt-python-package-cookiecutter

./: .gitlab-ci.yml  README.md  copier.yaml  slugify.jinja
template/: LICENSE  README.md.jinja  justfile  mkdocs.yml.jinja  pyproject.toml.jinja
template/.github/actions/python-poetry-env/: action.yml
template/.github/workflows/: draft_release.yml  release.yml  release_and_doc.yml  test.yml  {% if publish_docs_on_gh_pages  or publish_package_on_pypi  %}pypi_release_and_docs.yml{% endif %}.jinja
template/docs/: api_docs.md.jinja
template/notebooks/: test1.ipynb.jinja
template/src/{{module_name}}/: __init__.py.jinja
template/tests/: test_can_import.py.jinja
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}.git/: pyproject.toml
{{cookiecutter.project_slug}}.git/notebooks/: test1.ipynb
{{cookiecutter.project_slug}}.git/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}.git/tests/: test_can_import.py
